test/valid/fc36994_TestCastingWithErrors/TestCastingOk.plume
/**
 * For testing correct casting
 * @author 36994, César Santos
 */
class TestCastingOk extends Object is
  method main : () -> String is
    (new CorrectCasting()).asString("test")