test/invalid/fc36994_TestOverloading/OverloadingTest.plume
/**
 * For testing overloading
 * @author 36994, César Santos
 */
class OverloadingTest extends Object is
  method test : () -> String is
    5 + "5"